# paletino

./: .gitignore  Cargo.toml  README.md  index.html  paletino.js  paletino_bg.wasm
.github/workflows/: pages.yml
src/: app.rs  lib.rs  main.rs
src/widgets/: file.rs
