[package]
name = "paletino"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.22.0"
eframe = "0.22.0"
egui_extras = { version = "0.22.0", features = ["image"] }
env_logger = "0.10.0"
image = "0.24.6"
log = "0.4.19"
